err/glsvg.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/glsvg'...
Compiling './lib/python3.5/site-packages/glsvg/render_target.py'...
***   File "./lib/python3.5/site-packages/glsvg/render_target.py", line 12
    print "texture id", self.id
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glsvg/shader.py'...
***   File "./lib/python3.5/site-packages/glsvg/shader.py", line 32
    print "%s compiled successfuly." % (self.name)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/glsvg/svg.py'...
***   File "./lib/python3.5/site-packages/glsvg/svg.py", line 138
    print "registering pattern"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glsvg/svg_parser_utils.py'...
***   File "./lib/python3.5/site-packages/glsvg/svg_parser_utils.py", line 81
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/glsvg/svg_path_builder.py'...
***   File "./lib/python3.5/site-packages/glsvg/svg_path_builder.py", line 440
    print "Warning: SVG Parser - %s" % (message,)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/glsvg/svg_pattern.py'...
***   File "./lib/python3.5/site-packages/glsvg/svg_pattern.py", line 51
    print "extents"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/glsvg-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
